# papatextureeditor

./: CMakeLists.txt  README.md  helpdialog.cpp  helpdialog.h  main.cpp  papafile.cpp  papafile.h  papafileheader.h  papatextureeditor  papatextureeditor.cpp  papatextureeditor.h  papatexturereader.cpp  papatexturereader.h  papatexturereader.kdev4  texturelistmodel.cpp  texturelistmodel.h
